--- a/entwatch/ze_v0u0v_a6_csgo.cfg
+++ b/entwatch/ze_v0u0v_a6_csgo.cfg
@@ -3,7 +3,7 @@
 	"0"
 	{
 		"name"				"Ammo"
-		"shortname"			"弹药"
+		"shortname"			"ammo"
 		"color"				"FFFF00"
 		"buttonclass"		"func_button"
 		"filtername"		"player_ammo"
@@ -22,7 +22,7 @@
 	"1"
 	{
 		"name"				"Push"
-		"shortname"			"风"
+		"shortname"			"push"
 		"color"				"22FF88"
 		"buttonclass"		"func_button"
 		"filtername"		"player_wind"
@@ -41,7 +41,7 @@
 	"2"
 	{
 		"name"				"Heal"
-		"shortname"			"奶"
+		"shortname"			"heal"
 		"color"				"FFFFFF"
 		"buttonclass"		"func_button"
 		"filtername"		"player_heal"
@@ -60,7 +60,7 @@
 	"3"
 	{
 		"name"				"Beam"
-		"shortname"			"激光"
+		"shortname"			"beam"
 		"color"				"EE0000"
 		"buttonclass"		"func_button"
 		"filtername"		"player_beam"
@@ -79,7 +79,7 @@
 	"4"
 	{
 		"name"				"Sphere"
-		"shortname"			"减速带"
+		"shortname"			"sphere"
 		"color"				"55FF55"
 		"buttonclass"		"func_button"
 		"filtername"		"player_poison"
@@ -98,7 +98,7 @@
 	"5"
 	{
 		"name"				"Zombie Heal"
-		"shortname"			"ZM治疗"
+		"shortname"			"ZM HEAL"
 		"color"				"FF9999"
 		"buttonclass"		"func_button"
 		"filtername"		"player_zheal"
@@ -117,7 +117,7 @@
 	"6"
 	{
 		"name"				"Zombie Gravity"
-		"shortname"			"ZM黑洞"
+		"shortname"			"ZM gravity"
 		"color"				"FF0066"
 		"buttonclass"		"func_button"
 		"filtername"		"player_zgravity"
@@ -152,7 +152,7 @@
 	"8"
 	{
 		"name"              "Gravity Toilet"
-		"shortname"         "黑洞马桶"
+		"shortname"         "Gravity Toilet"
 		"color"             "FF00FF"
 		"buttonclass"       "func_button"
 		"filtername"        "player_gravityt"
@@ -171,7 +171,7 @@
 		"9"
 	{
 		"name"              "Poison Toilet"
-		"shortname"         "毒马桶"
+		"shortname"         "poison toilet"
 		"color"             "00FF00"
 		"buttonclass"       "func_button"
 		"filtername"        "player_poisont"
@@ -190,7 +190,7 @@
 	"10"
 	{
 		"name"              "Earth Toilet"
-		"shortname"         "土马桶"
+		"shortname"         "earth toilet"
 		"color"             "CC9944"
 		"buttonclass"       "func_button"
 		"filtername"        "player_eartht"
@@ -209,7 +209,7 @@
 		"11"
 	{
 		"name"              "Water Toilet"
-		"shortname"         "水马桶"
+		"shortname"         "water toilet"
 		"color"             "0000FF"
 		"buttonclass"       "func_button"
 		"filtername"        "player_watert"
@@ -228,7 +228,7 @@
 	"12"
 	{
 		"name"              "Wind Toilet"
-		"shortname"         "风马桶"
+		"shortname"         "wind toilet"
 		"color"             "00FFDD"
 		"buttonclass"       "func_button"
 		"filtername"        "player_pusht"
@@ -247,7 +247,7 @@
 	"13"
 	{
 		"name"              "Fire Toilet"
-		"shortname"         "火马桶"
+		"shortname"         "fire toilet"
 		"color"             "FFBB00"
 		"buttonclass"       "func_button"
 		"filtername"        "player_firet"
@@ -266,7 +266,7 @@
 	"14"
 	{
 		"name"              "Ice Toilet"
-		"shortname"         "冰马桶"
+		"shortname"         "ice toilet"
 		"color"             "00CCFF"
 		"buttonclass"       "func_button"
 		"filtername"        "player_icet"
@@ -285,7 +285,7 @@
 	"15"
 	{
 		"name"              "Electric Toilet"
-		"shortname"         "电马桶"
+		"shortname"         "electric toilet"
 		"color"             "0099FF"
 		"buttonclass"       "func_button"
 		"filtername"        "player_elect"
